# uchat

./: CMakeLists.txt  JSON_SENDMESSAGE  Makefile  Request-schema.md  chat_server
client/: CMakeLists.txt  Makefile  client  create_db  uchat
client/inc/: header.h
client/json-c/src/: json_object.c  json_object_iterator.c  json_tokener.c  json_visit.c
client/libs/json-c/: Makefile
client/libs/json-c/src/: json_util.c  libjson.c  linkhash.c  random_seed.c  strerror_override.c
client/src/: main.c  mx_add_cont_show.c  mx_add_new_mess.c  mx_add_new_room.c  mx_build_auth.c  mx_cancel_btn.c  mx_client_recv.c  mx_edit_profile.c  mx_event.c  mx_init_chat_window.c  mx_list_room_mess.c  mx_logout.c  mx_parse_cont.c  mx_parse_json.c  mx_renew_contact.c  mx_settings.c  mx_sqlite.c
client/src/controllers/: encrypt.c  mx_contr_add_contact.c  mx_contr_add_room.c  mx_contr_auth.c  mx_contr_logout.c  mx_contr_new_message.c  mx_contr_renew.c  mx_contr_renew_contacts.c  mx_contr_select_contacts.c  mx_contr_update_rooms.c  mx_select_listroom_and_mess.c  mx_select_rooms.c  mx_update_rooms.c
client/src/crud/: mx_add_table.c  mx_model_insert.c
client/src/db/: 1client.db  client.db  mx_create_table.c  mx_db_creation.c  mx_table_contacts.c  mx_table_messages.c  mx_table_rooms.c  mx_table_settings.c
client/src/json-c/: Makefile  arraylist.c  debug.c  json-c.pc  json_c_version.c  json_object.c  json_object_iterator.c  json_pointer.c  json_tokener.c  json_util.c  json_visit.c  libjson-c.5.0.0.dylib  libjson.c  linkhash.c  printbuf.c  random_seed.c  strerror_override.c
client/src/json-c-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  json-c.pc  libjson-c.5.0.0.dylib
client/src/json-c-build/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake  json_parse
client/src/json-c-build/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
client/src/json-c-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test1  test1Formatted  test2  test2Formatted  test4  testReplaceExisting  test_cast  test_charcase  test_compare  test_deep_copy  test_double_serializer  test_float  test_int_add  test_json_pointer  test_locale  test_null  test_object_iterator  test_parse  test_parse_int64  test_printbuf  test_set_serializer  test_set_value  test_util_file  test_visit
client/src/models/: mx_model_add_contact.c  mx_model_del_room.c  mx_model_logined.c  mx_model_new_message.c  mx_model_new_room.c  mx_model_update_contacts.c
client/src/view/: add_contact_pop_up.glade  add_room_pop_up.glade  chat.glade  chat5.glade  chat_old.glade  contacts_window.glade  edit_profile_wdw.glade  groups_window.glade  login_window.glade  logout_confirm_wdw.glade  settings_wdw.glade  sign_up_window.glade  sign_up_window_old.glade  style.css  style_light.css  uchat.glade
client/src/view/images/: Screenshot 2020-07-26 at 01.18.56-Recovered.psd
server/: 1  Makefile  chat_server  mx_printerr.c  mx_socket.c  mx_sqlite.c  server  uchat_server
server/inc/: header.h
server/json-c/src/: json_c_version.c  printbuf.c
server/libmx/src/: mx_create_node.c
server/libs/json-c/: Makefile
server/libs/json-c/inc/: config.h
server/libs/json-c/src/: arraylist.c  debug.c  json_pointer.c
server/src/: Commands_toCreate_db  demonize.c  main.c  mx_add_room.c  mx_add_room_resp.c  mx_event.c  mx_parse_json.c  mx_printerr.c  mx_socket.c  mx_sqlite.c  sqlite.c
server/src/controllers/: mx_contr_add_contact.c  mx_contr_add_new_room.c  mx_contr_del_room.c  mx_contr_recieve_message.c  mx_contr_renew.c  mx_contr_renew_contacts.c  mx_contr_renew_rooms.c  mx_date_aval.c  mx_date_converter.c  mx_date_now.c  mx_gen_auth_token.c  mx_gen_verify_code.c  mx_recieve_mess.c  mx_resieve_mess.c  mx_sendmail.c  mx_signin.c  mx_signup.c  mx_verify_mail.c
server/src/db/: mx_create_table.c  mx_db_creation.c  mx_table_messages.c  mx_table_rooms.c  mx_table_roomsmeta.c  mx_table_users.c  mx_table_users_meta.c  server.db  server1.db  test-server.db
server/src/db/glade_files/: add_contact_pop_up.glade  add_room_pop_up.glade  chat.glade  contacts_window.glade  edit_profile_wdw.glade  room_settings_wdw.glade
server/src/json-c-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  json.h  libjson-c.5.0.0.dylib
server/src/json-c-build/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake  json_parse
server/src/json-c-build/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
server/src/json-c-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test1  test1Formatted  test2  test2Formatted  test4  testReplaceExisting  test_cast  test_charcase  test_compare  test_deep_copy  test_double_serializer  test_float  test_int_add  test_json_pointer  test_locale  test_null  test_object_iterator  test_parse  test_parse_int64  test_printbuf  test_set_serializer  test_set_value  test_util_file  test_visit
server/src/models/: mx_model_del.c  mx_model_insert.c  mx_model_login.c  mx_model_select.c  mx_model_update.c
server/src/utils/: mx_create_rnode.c
src/view/: add_contact_pop_up.glade  add_room_pop_up.glade  login_window.glade  sign_up_window.glade
