cmake_minimum_required(VERSION 3.15)
project(uchat)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(client)
include_directories(client/inc)
include_directories(client/json-c)
include_directories(client/json-c/inc)
include_directories(client/json-c/src)
include_directories(client/libmx)
include_directories(client/libmx/inc)
include_directories(client/src)
include_directories(client/src/json-c)
include_directories(client/src/json-c/tests)
include_directories(server)
include_directories(server/inc)
include_directories(server/json-c)
include_directories(server/json-c/inc)
include_directories(server/json-c/src)
include_directories(server/libmx)
include_directories(server/libmx/inc)
include_directories(server/libmx/src)
include_directories(server/src)

add_executable(uchat
        client/inc/header.h
        client/json-c/inc/apps_config.h
        client/json-c/inc/arraylist.h
        client/json-c/inc/config.h
        client/json-c/inc/debug.h
        client/json-c/inc/json.h
        client/json-c/inc/json_c_version.h
        client/json-c/inc/json_config.h
        client/json-c/inc/json_inttypes.h
        client/json-c/inc/json_object.h
        client/json-c/inc/json_object_iterator.h
        client/json-c/inc/json_object_private.h
        client/json-c/inc/json_pointer.h
        client/json-c/inc/json_tokener.h
        client/json-c/inc/json_types.h
        client/json-c/inc/json_util.h
        client/json-c/inc/json_visit.h
        client/json-c/inc/linkhash.h
        client/json-c/inc/math_compat.h
        client/json-c/inc/printbuf.h
        client/json-c/inc/random_seed.h
        client/json-c/inc/snprintf_compat.h
        client/json-c/inc/strdup_compat.h
        client/json-c/inc/strerror_override.h
        client/json-c/inc/strerror_override_private.h
        client/json-c/inc/vasprintf_compat.h
        client/json-c/src/arraylist.c
        client/json-c/src/debug.c
        client/json-c/src/json_c_version.c
        client/json-c/src/json_object.c
        client/json-c/src/json_object_iterator.c
        client/json-c/src/json_pointer.c
        client/json-c/src/json_tokener.c
        client/json-c/src/json_util.c
        client/json-c/src/json_visit.c
        client/json-c/src/libjson.c
        client/json-c/src/linkhash.c
        client/json-c/src/printbuf.c
        client/json-c/src/random_seed.c
        client/json-c/src/strerror_override.c
        client/libmx/inc/libmx.h
        client/libmx/src/mx_arrlen.c
        client/libmx/src/mx_atoi.c
        client/libmx/src/mx_binary_search.c
        client/libmx/src/mx_bubble_sort.c
        client/libmx/src/mx_count_char.c
        client/libmx/src/mx_count_digits.c
        client/libmx/src/mx_count_letters.c
        client/libmx/src/mx_count_substr.c
        client/libmx/src/mx_count_words.c
        client/libmx/src/mx_create_node.c
        client/libmx/src/mx_del_extra_spaces.c
        client/libmx/src/mx_del_strarr.c
        client/libmx/src/mx_file_to_str.c
        client/libmx/src/mx_foreach.c
        client/libmx/src/mx_get_char_index.c
        client/libmx/src/mx_get_substr_index.c
        client/libmx/src/mx_hex_to_nbr.c
        client/libmx/src/mx_is_char.c
        client/libmx/src/mx_is_space.c
        client/libmx/src/mx_isdigit.c
        client/libmx/src/mx_itoa.c
        client/libmx/src/mx_list_size.c
        client/libmx/src/mx_memccpy.c
        client/libmx/src/mx_memchr.c
        client/libmx/src/mx_memcmp.c
        client/libmx/src/mx_memcpy.c
        client/libmx/src/mx_memmem.c
        client/libmx/src/mx_memmove.c
        client/libmx/src/mx_memrchr.c
        client/libmx/src/mx_memset.c
        client/libmx/src/mx_nbr_to_hex.c
        client/libmx/src/mx_pop_back.c
        client/libmx/src/mx_pop_front.c
        client/libmx/src/mx_pow.c
        client/libmx/src/mx_print_strarr.c
        client/libmx/src/mx_print_unicode.c
        client/libmx/src/mx_printchar.c
        client/libmx/src/mx_printerr.c
        client/libmx/src/mx_printint.c
        client/libmx/src/mx_printstr.c
        client/libmx/src/mx_push_back.c
        client/libmx/src/mx_push_front.c
        client/libmx/src/mx_quicksort.c
        client/libmx/src/mx_read_line.c
        client/libmx/src/mx_realloc.c
        client/libmx/src/mx_replace_substr.c
        client/libmx/src/mx_sort_list.c
        client/libmx/src/mx_sqrt.c
        client/libmx/src/mx_str_reverse.c
        client/libmx/src/mx_strcat.c
        client/libmx/src/mx_strcmp.c
        client/libmx/src/mx_strcpy.c
        client/libmx/src/mx_strdel.c
        client/libmx/src/mx_strdup.c
        client/libmx/src/mx_strjoin.c
        client/libmx/src/mx_strlen.c
        client/libmx/src/mx_strncpy.c
        client/libmx/src/mx_strndup.c
        client/libmx/src/mx_strnew.c
        client/libmx/src/mx_strsplit.c
        client/libmx/src/mx_strstr.c
        client/libmx/src/mx_strtrim.c
        client/libmx/src/mx_swap_char.c
        client/libmx/src/mx_swap_elem.c
        client/src/crud/mx_model_del.c
        client/src/crud/mx_model_insert.c
        client/src/crud/mx_model_select.c
        client/src/crud/mx_model_update.c
        client/src/json-c/apps/json_parse.c
        client/src/json-c/fuzz/tokener_parse_ex_fuzzer.cc
        client/src/json-c/tests/parse_flags.c
        client/src/json-c/tests/parse_flags.h
        client/src/json-c/tests/test1.c
        client/src/json-c/tests/test2.c
        client/src/json-c/tests/test4.c
        client/src/json-c/tests/test_cast.c
        client/src/json-c/tests/test_charcase.c
        client/src/json-c/tests/test_compare.c
        client/src/json-c/tests/test_deep_copy.c
        client/src/json-c/tests/test_double_serializer.c
        client/src/json-c/tests/test_float.c
        client/src/json-c/tests/test_int_add.c
        client/src/json-c/tests/test_json_pointer.c
        client/src/json-c/tests/test_locale.c
        client/src/json-c/tests/test_null.c
        client/src/json-c/tests/test_object_iterator.c
        client/src/json-c/tests/test_parse.c
        client/src/json-c/tests/test_parse_int64.c
        client/src/json-c/tests/test_printbuf.c
        client/src/json-c/tests/test_set_serializer.c
        client/src/json-c/tests/test_set_value.c
        client/src/json-c/tests/test_util_file.c
        client/src/json-c/tests/test_visit.c
        client/src/json-c/tests/testReplaceExisting.c
        client/src/json-c/arraylist.c
        client/src/json-c/arraylist.h
        client/src/json-c/debug.c
        client/src/json-c/debug.h
        client/src/json-c/json.h
        client/src/json-c/json_c_version.c
        client/src/json-c/json_c_version.h
        client/src/json-c/json_inttypes.h
        client/src/json-c/json_object.c
        client/src/json-c/json_object.h
        client/src/json-c/json_object_iterator.c
        client/src/json-c/json_object_iterator.h
        client/src/json-c/json_object_private.h
        client/src/json-c/json_pointer.c
        client/src/json-c/json_pointer.h
        client/src/json-c/json_tokener.c
        client/src/json-c/json_tokener.h
        client/src/json-c/json_types.h
        client/src/json-c/json_util.c
        client/src/json-c/json_util.h
        client/src/json-c/json_visit.c
        client/src/json-c/json_visit.h
        client/src/json-c/libjson.c
        client/src/json-c/linkhash.c
        client/src/json-c/linkhash.h
        client/src/json-c/math_compat.h
        client/src/json-c/printbuf.c
        client/src/json-c/printbuf.h
        client/src/json-c/random_seed.c
        client/src/json-c/random_seed.h
        client/src/json-c/snprintf_compat.h
        client/src/json-c/strdup_compat.h
        client/src/json-c/strerror_override.c
        client/src/json-c/strerror_override.h
        client/src/json-c/strerror_override_private.h
        client/src/json-c/vasprintf_compat.h
        client/src/models/mx_model_logined.c
        client/src/main.c
        client/src/mx_parse_json.c
        client/src/mx_printerr.c
        server/inc/header.h
        server/json-c/inc/apps_config.h
        server/json-c/inc/arraylist.h
        server/json-c/inc/config.h
        server/json-c/inc/debug.h
        server/json-c/inc/json.h
        server/json-c/inc/json_c_version.h
        server/json-c/inc/json_config.h
        server/json-c/inc/json_inttypes.h
        server/json-c/inc/json_object.h
        server/json-c/inc/json_object_iterator.h
        server/json-c/inc/json_object_private.h
        server/json-c/inc/json_pointer.h
        server/json-c/inc/json_tokener.h
        server/json-c/inc/json_types.h
        server/json-c/inc/json_util.h
        server/json-c/inc/json_visit.h
        server/json-c/inc/linkhash.h
        server/json-c/inc/math_compat.h
        server/json-c/inc/printbuf.h
        server/json-c/inc/random_seed.h
        server/json-c/inc/snprintf_compat.h
        server/json-c/inc/strdup_compat.h
        server/json-c/inc/strerror_override.h
        server/json-c/inc/strerror_override_private.h
        server/json-c/inc/vasprintf_compat.h
        server/json-c/src/arraylist.c
        server/json-c/src/debug.c
        server/json-c/src/json_c_version.c
        server/json-c/src/json_object.c
        server/json-c/src/json_object_iterator.c
        server/json-c/src/json_pointer.c
        server/json-c/src/json_tokener.c
        server/json-c/src/json_util.c
        server/json-c/src/json_visit.c
        server/json-c/src/libjson.c
        server/json-c/src/linkhash.c
        server/json-c/src/printbuf.c
        server/json-c/src/random_seed.c
        server/json-c/src/strerror_override.c
        server/libmx/inc/libmx.h
        server/libmx/src/mx_arrlen.c
        server/libmx/src/mx_atoi.c
        server/libmx/src/mx_binary_search.c
        server/libmx/src/mx_bubble_sort.c
        server/libmx/src/mx_count_char.c
        server/libmx/src/mx_count_digits.c
        server/libmx/src/mx_count_letters.c
        server/libmx/src/mx_count_substr.c
        server/libmx/src/mx_count_words.c
        server/libmx/src/mx_create_node.c
        server/libmx/src/mx_del_extra_spaces.c
        server/libmx/src/mx_del_strarr.c
        server/libmx/src/mx_file_to_str.c
        server/libmx/src/mx_foreach.c
        server/libmx/src/mx_get_char_index.c
        server/libmx/src/mx_get_substr_index.c
        server/libmx/src/mx_hex_to_nbr.c
        server/libmx/src/mx_is_char.c
        server/libmx/src/mx_is_space.c
        server/libmx/src/mx_isdigit.c
        server/libmx/src/mx_itoa.c
        server/libmx/src/mx_list_size.c
        server/libmx/src/mx_memccpy.c
        server/libmx/src/mx_memchr.c
        server/libmx/src/mx_memcmp.c
        server/libmx/src/mx_memcpy.c
        server/libmx/src/mx_memmem.c
        server/libmx/src/mx_memmove.c
        server/libmx/src/mx_memrchr.c
        server/libmx/src/mx_memset.c
        server/libmx/src/mx_nbr_to_hex.c
        server/libmx/src/mx_pop_back.c
        server/libmx/src/mx_pop_front.c
        server/libmx/src/mx_pow.c
        server/libmx/src/mx_print_strarr.c
        server/libmx/src/mx_print_unicode.c
        server/libmx/src/mx_printchar.c
        server/libmx/src/mx_printerr.c
        server/libmx/src/mx_printint.c
        server/libmx/src/mx_printstr.c
        server/libmx/src/mx_push_back.c
        server/libmx/src/mx_push_front.c
        server/libmx/src/mx_quicksort.c
        server/libmx/src/mx_read_line.c
        server/libmx/src/mx_realloc.c
        server/libmx/src/mx_replace_substr.c
        server/libmx/src/mx_sort_list.c
        server/libmx/src/mx_sqrt.c
        server/libmx/src/mx_str_reverse.c
        server/libmx/src/mx_strcat.c
        server/libmx/src/mx_strcmp.c
        server/libmx/src/mx_strcpy.c
        server/libmx/src/mx_strdel.c
        server/libmx/src/mx_strdup.c
        server/libmx/src/mx_strjoin.c
        server/libmx/src/mx_strlen.c
        server/libmx/src/mx_strncpy.c
        server/libmx/src/mx_strndup.c
        server/libmx/src/mx_strnew.c
        server/libmx/src/mx_strsplit.c
        server/libmx/src/mx_strstr.c
        server/libmx/src/mx_strtrim.c
        server/libmx/src/mx_swap_char.c
        server/libmx/src/mx_swap_elem.c
        server/src/controllers/mx_contr_renew.c
        server/src/controllers/mx_date_aval.c
        server/src/controllers/mx_date_converter.c
        server/src/controllers/mx_date_now.c
        server/src/controllers/mx_gen_auth_token.c
        server/src/controllers/mx_gen_verify_code.c
        server/src/controllers/mx_recieve_mess.c
        server/src/controllers/mx_sendmail.c
        server/src/controllers/mx_signin.c
        server/src/controllers/mx_signup.c
        server/src/controllers/mx_verify_mail.c
        server/src/models/mx_model_del.c
        server/src/models/mx_model_insert.c
        server/src/models/mx_model_select.c
        server/src/models/mx_model_update.c
        server/src/main.c
        server/src/mx_event.c
        server/src/mx_parse_json.c
        server/src/mx_printerr.c
        server/src/mx_socket.c
        server/src/mx_sqlite.c)
